--- a/docs/styles.css
+++ b/docs/styles.css
@@ -597,21 +597,21 @@ span {
     animation-fill-mode: forwards;
 }
 
-#defaultCanvas0 {
+#beach-canvas {
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
 }
 
-#white-bg {
+#beach-bg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
     z-index: 0;
+    background: #ffddc177;
 }
 
 #if-mobile{
